# new-undetect-browser

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  ADVANCED_PROTECTION_REPORT.md  ANTIDETECT_EXPLANATION_RU.md  BUILD_INSTALLER.bat  BUILD_VERIFICATION_REPORT.md  CHANGELOG.md  CHROMIUM_BUILD_SESSION_5.md  CHROMIUM_FORK_GUIDE.md  CHROMIUM_FORK_QUICKSTART.md  CHROMIUM_INTEGRATION_SESSION_4.md  CI_FIXES.md  CI_PIPELINE_GUIDE.md  CLOUD_DEPLOY.md  CONTRIBUTING.md  CONTRIBUTORS.md  CREATE_EXE.ps1  CREATE_PYTHON_INSTALLER.bat  DEBUG_SERVER.bat  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DETECTION_METHODS_ANALYSIS.md  Dockerfile  ELECTRON_BUILD.md  EXAMPLES.md  FAQ.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_WEB_INTERFACE_REPORT.md  FIX_ERRORS.bat  GETTING_STARTED.md  GITHUB_ACTIONS_FIX_REPORT.md  GITHUB_CI_READINESS.md  GITHUB_TESTS_EXPLANATION.md  HUMAN_BEHAVIOR_REPORT.md  (+106 more)
.github/workflows/: ci-cd.yml  ci-with-chrome.yml.disabled  ci.yml  ci.yml.disabled  detection-tests.yml.disabled  e2e-tests.yml  test.yml  test.yml.disabled
analytics/: README.md  engine.ts
benchmarks/: load-test.js
build-scripts/: apply-patches.sh  build-chromium.sh  package-chromium.sh  setup-chromium.sh
chromium/: BUILDING.md  CHROMIUM_FINGERPRINT_ARCHITECTURE.md  INTEGRATION_ARCHITECTURE.md  PATCHES.md  README.md  SESSION-4-SUMMARY.md  build-internal.sh  build.sh  docker-compose.yml  integration-test.sh  quick-start.sh  test-patches.js
chromium/config/: args.gn  chromium-flags.conf
chromium/docker/: Dockerfile.build  Dockerfile.builder
chromium/patches/: 000-fingerprint-session-manager.patch  001-remove-webdriver.patch  002-remove-automation-flags.patch  020-canvas-noise.patch  021-canvas-unified.patch  022-navigator-unified.patch  023-webgl-unified.patch  024-audio-unified.patch  025-screen-unified.patch  README.md  audio-fingerprint.patch  automation-removal.patch  canvas-noise.patch  cdp-removal.patch  permissions-stealth.patch  webgl-fingerprint.patch
chromium/scripts/: apply-patches.sh  build.sh  fetch-chromium.sh
cloud/: README.md  SESSION-3-SUMMARY.md  geo-router.ts  session-migration.ts
cloud/__tests__/: geo-router.test.ts  session-migration.test.ts
cloud/api/: README.md  example.ts  index.ts  server.ts  session-manager.ts  types.ts  websocket.ts
cloud/config/: init.sql  nginx.conf
cloud/kernel/: README.md  example.ts  index.ts  loader.ts  types.ts
cloud/vm/: README.md  SWIFTSHADER.md  example.ts  gpu-database.ts  gpu-types.ts  index.ts  qemu-manager.ts  swiftshader-config.ts  types.ts
docker/: Dockerfile.chromium-build  Dockerfile.cloud  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DETECTION_SERVICES.md  MULTI_REGION_DEPLOYMENT.md  SESSION_15_SUMMARY.md  SESSION_7.md  SESSION_8.md  TESTING.md
electron/: main.ts  preload.ts
electron/renderer/: app.js  index.html  styles.css
examples/: README.md  adaptive-detection-example.ts  advanced-features-example.ts  basic-usage.ts  behavioral-example.ts  detection-test-example.ts  detection-test.ts  ml-profile-generator.ts  multilogin-level-example.ts  paranoid-mode.ts  performance-optimization-example.ts  profile-management.ts  proxy-fingerprint-integration.ts  quick-start-realistic.ts  realistic-human-simulation.ts  ultimate-stealth-example.ts  ultra-realistic-behavior-example.ts
frontend/: Dockerfile.dev  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-example/: ProfileManager.tsx
frontend/src/: App.tsx
k8s/: .gitignore  README.md  autoscaler.yaml  configmap.yaml  create-secrets.sh  deploy-aws.sh  deploy-digitalocean.sh  deploy-gcp.sh  deploy-local.sh  deploy-multi-region.sh  deployment.yaml  global-lb.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets-template.yaml  service.yaml  statefulset.yaml
k8s/regions/: ap-south.yaml  eu-west.yaml  ru-central.yaml  us-east.yaml
kubernetes/: README.md  SESSION-8-SUMMARY.md  kind-config.yaml
kubernetes/istio/: gateway.yaml
kubernetes/manifests/: api-deployment.yaml  browser-pool-deployment.yaml  config.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  network-policy.yaml  rbac.yaml
ml/: README.md  index.ts  requirements.txt  tsconfig.json
ml-profiles/: README.md  SESSION-7-SUMMARY.md
ml-profiles/data/: distributions.json
ml-profiles/generator/: behavior-simulator.ts  fingerprint-generator.ts
ml-profiles/rotation/: anti-correlation.ts  profile-manager.ts
ml/api/: generate.ts
ml/data-collection/: demo.ts  generator.ts  parser.ts  scraper.ts
ml/datasets/: validation.ts
ml/detection/: README.md  auto-updater.ts  dashboard.ts  demo.ts  index.ts  monitor.ts  rl-agent.py
ml/models/: demo.py  generate.py  profile-generator.py  train.py
ml/scripts/: generate-sample-dataset.js
ml/types/: fingerprint.ts
monitoring/prometheus/: alerts.yml  prometheus.yml
nginx/: nginx.conf
optimization/: README.md  SESSION-9-SUMMARY.md
optimization/browser/: pool.ts
optimization/cache/: multi-level-cache.ts
optimization/memory/: gc-manager.ts
optimization/network/: connection-pool.ts
optimization/utils/: compression.ts
patches/: 001-webgl-fingerprint-protection.patch  002-canvas-noise-injection.patch  008-cdp-detection-removal.patch
scripts/: auto-recovery.js  clean.js  fix-issues.js  fix-ts-errors.py  health-check.js  postinstall.js  prestart.js  setup.js
scripts/windows/: fix-issues.ps1  install.ps1
sdk/go/: README.md  go.mod
sdk/javascript/: README.md  package.json
sdk/python/: README.md  setup.py
security/: README.md  SESSION-10-SUMMARY.md  audit.ts  auth.ts  encryption.ts
server/: https-server.ts  index-v2.ts  index.ts
server/api/: automation.ts  profiles.ts  proxies.ts  stats.ts
src/: index.ts  init.ts
testing/: README.md  SESSION-5-SUMMARY.md
tests/: README.md
types/: web-apis.d.ts
virtualization/: README.md  SESSION-6-SUMMARY.md
web/: index.html
(+141 files in other folders)
